Ensure docker build will be performed after potential AppCDS creation
    Fixes: #14565