@@ -13,6 +13,7 @@ import java.nio.file.Paths;
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -27,10 +28,11 @@ import io.quarkus.container.spi.AvailableContainerImageExtensionBuildItem;
 import io.quarkus.container.spi.ContainerImageBuildRequestBuildItem;
 import io.quarkus.container.spi.ContainerImageInfoBuildItem;
 import io.quarkus.container.spi.ContainerImagePushRequestBuildItem;
-import io.quarkus.deployment.IsDockerWorking;
+import io.quarkus.deployment.Capability;
 import io.quarkus.deployment.IsNormalNotRemoteDev;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
+import io.quarkus.deployment.builditem.CapabilityBuildItem;
 import io.quarkus.deployment.pkg.PackageConfig;
 import io.quarkus.deployment.pkg.builditem.AppCDSResultBuildItem;
 import io.quarkus.deployment.pkg.builditem.ArtifactResultBuildItem;
@@ -45,16 +47,21 @@ public class DockerProcessor {
     private static final Logger log = Logger.getLogger(DockerProcessor.class);
     private static final String DOCKER = "docker";
     private static final String DOCKERFILE_JVM = "Dockerfile.jvm";
-    private static final String DOCKERFILE_LEGACY_JAR = "Dockerfile.legacy-jar";
+    private static final String DOCKERFILE_FAST_JAR = "Dockerfile.fast-jar";
     private static final String DOCKERFILE_NATIVE = "Dockerfile.native";
     private static final String DOCKER_DIRECTORY_NAME = "docker";
     static final String DOCKER_CONTAINER_IMAGE_NAME = "docker";
 
-    private final IsDockerWorking isDockerWorking = new IsDockerWorking();
+    private final DockerWorking dockerWorking = new DockerWorking();
 
     @BuildStep
     public AvailableContainerImageExtensionBuildItem availability() {
         return new AvailableContainerImageExtensionBuildItem(DOCKER);
+    }
+
+    @BuildStep(onlyIf = DockerBuild.class)
+    public CapabilityBuildItem capability() {
+        return new CapabilityBuildItem(Capability.CONTAINER_IMAGE_DOCKER);
     }
 
     @BuildStep(onlyIf = { IsNormalNotRemoteDev.class, DockerBuild.class }, onlyIfNot = NativeBuild.class)
@@ -64,7 +71,7 @@ public class DockerProcessor {
             ContainerImageInfoBuildItem containerImageInfo,
             Optional<ContainerImageBuildRequestBuildItem> buildRequest,
             Optional<ContainerImagePushRequestBuildItem> pushRequest,
-            @SuppressWarnings("unused") Optional<AppCDSResultBuildItem> appCDSResult, // ensure docker build will be performed after AppCDS creation
+            @SuppressWarnings("unused") Optional<AppCDSResultBuildItem> appCDSResult, // ensure docker build will be performed after AppCDS creation 
             BuildProducer<ArtifactResultBuildItem> artifactResultProducer,
             PackageConfig packageConfig,
             @SuppressWarnings("unused") // used to ensure that the jar has been built
@@ -75,7 +82,7 @@ public class DockerProcessor {
             return;
         }
 
-        if (!isDockerWorking.getAsBoolean()) {
+        if (!dockerWorking.getAsBoolean()) {
             throw new RuntimeException("Unable to build docker image. Please check your docker installation");
         }
 
@@ -86,10 +93,8 @@ public class DockerProcessor {
                 false,
                 pushRequest.isPresent(), packageConfig);
 
-        // a pull is not required when using this image locally because the docker strategy always builds the container image
-        // locally before pushing it to the registry
         artifactResultProducer.produce(new ArtifactResultBuildItem(null, "jar-container",
-                Map.of("container-image", builtContainerImage, "pull-required", "false")));
+                Collections.singletonMap("container-image", builtContainerImage)));
     }
 
     @BuildStep(onlyIf = { IsNormalNotRemoteDev.class, NativeBuild.class, DockerBuild.class })
@@ -109,7 +114,7 @@ public class DockerProcessor {
             return;
         }
 
-        if (!isDockerWorking.getAsBoolean()) {
+        if (!dockerWorking.getAsBoolean()) {
             throw new RuntimeException("Unable to build docker image. Please check your docker installation");
         }
 
@@ -123,11 +128,8 @@ public class DockerProcessor {
         ImageIdReader reader = new ImageIdReader();
         String builtContainerImage = createContainerImage(containerImageConfig, dockerConfig, containerImage, out, reader, true,
                 pushRequest.isPresent(), packageConfig);
-
-        // a pull is not required when using this image locally because the docker strategy always builds the container image
-        // locally before pushing it to the registry
         artifactResultProducer.produce(new ArtifactResultBuildItem(null, "native-container",
-                Map.of("container-image", builtContainerImage, "pull-required", "false")));
+                Collections.singletonMap("container-image", builtContainerImage)));
     }
 
     private String createContainerImage(ContainerImageConfig containerImageConfig, DockerConfig dockerConfig,
@@ -233,8 +235,9 @@ public class DockerProcessor {
         } else {
             if (dockerConfig.dockerfileJvmPath.isPresent()) {
                 return ProvidedDockerfile.get(Paths.get(dockerConfig.dockerfileJvmPath.get()), outputDirectory);
-            } else if (packageConfig.type.equals(PackageConfig.LEGACY_JAR)) {
-                return DockerfileDetectionResult.detect(DOCKERFILE_LEGACY_JAR, outputDirectory);
+            } else if (packageConfig.type.equals(PackageConfig.FAST_JAR)
+                    || packageConfig.type.equalsIgnoreCase(PackageConfig.MUTABLE_JAR)) {
+                return DockerfileDetectionResult.detect(DOCKERFILE_FAST_JAR, outputDirectory);
             } else {
                 return DockerfileDetectionResult.detect(DOCKERFILE_JVM, outputDirectory);
             }
